# u-connectXpress-host-library

./: .gitignore  CMakeLists.txt  findlist.awk  mk_urc_header.sh  mkdocs.sh  ublox.dot
examples/: ex_ethernet_wifi_bridge.c
include/: ucxh_config.h  ucxh_edm.h  ucxh_send.h  ucxh_serial.h  ucxh_urc.h
resources/: autogenerated.h
src/: ucxh_urc.c
src/generic/: ucxh_serial_generic.c
test/: ex_config.h  test_send.c  test_tools.h  ucxh_serial_mock.h
